# cpuInfo

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
inc/: cpuinformation.h
src/: cpuinformation.cpp  main.cpp
test/: CMakeLists.txt  cpuinformation_test.cpp
